# locate

./: .gitmodules  README.md
PD_edges/: dedgesToBSDSFormat.m
PD_edges/edges/: edgesDemo.m  edgesTrain.m  locateTestPano.m  paths.m
src/: main.lua  plotMatches.m  plotScoreMap.m  plotScoresMapAll.m  prepareP3D.lua  testPair.lua  testPairImagenet.lua
src/fb-imagenet/: SampleWeighter.lua  data.lua  dataset.lua  donkeyImagenet.lua  donkeyModapairs.lua  donkeyP3D.lua  main.lua  model.lua  modeldefs.lua  opts.lua  patchEx3D.py  patchExtraction.lua  test.lua  train.lua  util.lua
src/fb-imagenet/itkslave/: CMakeLists.txt  build.sh  itkslave.cpp  itkslave.lua  patchEx3D.py
src/fb-imagenet/models/: alexnet_ccn2.lua  alexnet_cudnn.lua  alexnet_cunn.lua  alexnetcaffe_ccn2.lua  alexnetcaffe_cudnn.lua  alexnetcaffe_cunn.lua  alexnetcaffemix_cunn.lua  alexnetcaffeofrnd_ccn2.lua  alexnetcaffesp_ccn2.lua
src/gridtest/: CMakeLists.txt  cli_grid.cpp  itktotensor.cpp
src/preproc/nii2torch/: mat2torch.lua  rem_orphans.lua
src/preproc/nii2torch/NIfTImatlab/: Makefile.in  README  configure  configure.ac
src/preproc/nii2torch/NIfTImatlab/doc/: Usage
src/preproc/nii2torch/NIfTImatlab/matlab/: cbiNiftiMerge.m  cbiNiftiVols.m  cbiParseCBIHeader.m  cbiReadNiftiHeader.m  cbiWriteNiftiHeader.m
src/preproc/nii2torch/NIfTImatlab/matlab/@niftifile/: display.m  fclose.m  fopen.m  fread.m  fseek.m  fwrite.m  niftifile.m  setNiftiQform.m  subsasgn.m
src/preproc/nii2torch/NIfTImatlab/matlab/@niftifile/private/: checkranges.m  niftiMatlabIO.mexmaci64
src/preproc/nii2torch/NIfTImatlab/matlab/@niftiheader/: datatype.m  niftiheader.m  set.m
src/preproc/nii2torch/NIfTImatlab/matlab/@niftiheader/private/: compressed.m  mat44ToQuat.m  name.m  type.m
src/preproc/nii2torch/NIfTImatlab/nifticlib/niftilib/: Makefile.in
src/preproc/nii2torch/NIfTImatlab/nifticlib/znzlib/: Makefile.in
src/preproc/nii2torch/NIfTImatlab/src/: niftiMatlabIO.cpp
src/preproc/pfm2torch/: pfm2torch.sh  pfm2torch_edges.sh  pfm2torch_edges_pano.sh  significantEdges.m
src/preproc/slices/: CMakeLists.txt  extract_slices.cpp
src/registration/gridtest/: CMakeLists.txt  FindLua.cmake  GridEvaluation.sh  cli_grid.cpp  itktotensor.cpp  itktotensor.h
src/registration/imgsimilarity/: CMakeLists.txt  MutualInfoSimilarityMetric.cpp  MutualInfoSimilarityMetric.h  NnSimilarityMetric.cpp  NnSimilarityMetric.h  SimilarityMetric.cpp  SimilarityMetric.h  main.cpp  script.lua  typedefinitions.h
src/registration/itkreg/: CMakeLists.txt  EvalRigidRegistration.cpp
src/registration/luawrap/: CMakeLists.txt  main.cpp  script.lua
src/registration/registrationtest/: CMakeLists.txt  registrationtest.cpp
src/registration/rigidregistration/: CMakeLists.txt  RegistrationEvaluation.sh  nloptfunction.cpp  nloptfunction.h  registrationevaluation.cpp  rigidregistration.cpp  script.lua
src/tum/nii2torch/: mat2torch.lua  nii2mat.m  nii2torch.sh
src/tum/nii2torch/NIfTImatlab/: config.status
src/tum/nii2torch/NIfTImatlab/examples/: niftiexample.m
src/tum/nii2torch/NIfTImatlab/include/: niftiMatlabIO.h
src/tum/nii2torch/NIfTImatlab/matlab/: cbiCreateNiftiHeader.m  cbiParseNiftiHeader.m  cbiReadNifti.m  cbiWriteNifti.m
src/tum/nii2torch/NIfTImatlab/matlab/@niftifile/: get.m  set.m  setNiftiSform.m  sizeofNifti.m  subsref.m
src/tum/nii2torch/NIfTImatlab/matlab/@niftifile/private/: niftiMatlabIO.mexa64
src/tum/nii2torch/NIfTImatlab/matlab/@niftiheader/: display.m  get.m  subsasgn.m  subsref.m
src/tum/nii2torch/NIfTImatlab/matlab/@niftiheader/private/: quatToMat44.m
src/tum/nii2torch/NIfTImatlab/nifticlib/: Makefile
src/tum/nii2torch/NIfTImatlab/nifticlib/utils/: Makefile
src/tum/nii2torch/NIfTImatlab/src/: Makefile.in
src/tum/slices/: CMakeLists.txt  align_volumes.cpp  extract_slices.cpp
